fix spacing

--- a/style.css
+++ b/style.css
@@ -2,33 +2,51 @@ html {
   font-size: 16px;
 }
 
+@charset "UTF-8";
+
+@font-face {
+  font-family: "BC-Falster-Grotesk-Regular";
+  src: url("fonts/BC-Falster-Grotesk-Regular-fdaf5be742363f9502b0419253f3633a.eot");
+  src: url("fonts/BC-Falster-Grotesk-Regular-fdaf5be742363f9502b0419253f3633a.eot?#iefix") format("embedded-opentype"), url("fonts/BC-Falster-Grotesk-Regular-fdaf5be742363f9502b0419253f3633a.woff2") format("woff2"), url("fonts/BC-Falster-Grotesk-Regular-fdaf5be742363f9502b0419253f3633a.woff") format("woff"), url("fonts/BC-Falster-Grotesk-Regular-fdaf5be742363f9502b0419253f3633a.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
-    font-family: 'BC Falster Grotesk', sans-serif;
+    font-family: 'BC-Falster-Grotesk-Regular', sans-serif;
 }
 
 body {
   min-width: 100%;
   min-height: 100%;
-  max-height: 50%;
-  max-width: 50%;
   margin: 0;
   padding: 0;
 }
 
-.nav {
+header {
   height: auto;
-  width: 100%;
-  top: 0;
-  padding: 1.15rem 0;
-  text-align: center;
+  width: auto;
+  margin left: auto;
+  margin-right: auto;
 }
 
-h1 {
+ul {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.title {
+  width: auto;
+  height: 100%;
   color: #000000;
   display: block;
-  text-align: center;
   text-transform: lowercase;
-  font-size: 1.5rem;
+  text-align: center;
+  font-size: 1.5em;
+  padding: 1.15rem 0;
+  margin left: auto;
+  margin-right: auto;
 }
 
 .banner {
